2007-08-21 08:31  olivier.salaun

	* lib/AuthCAS.pm: [reported by P.Brusten]Fix: expected an arrayref
	  instead of an array for gethttps2() output. This bug was
	  introduced by S.More's patch. Concel it.

2007-08-21 08:20  olivier.salaun

	* README: Refer to the bug tracking system

2007-04-06 16:14  olivier.salaun

	* Changes: Updated

2007-04-06 16:10  olivier.salaun

	* META.yml, lib/AuthCAS.pm: preparind 1.2

2007-04-06 16:05  olivier.salaun

	* lib/AuthCAS.pm: [Kasper Løvschall] Fix: XML parser now accepts
	  multiple name space tags in CAS xml responses

2007-04-06 15:56  olivier.salaun

	* lib/AuthCAS.pm: [#24021] [Stephen More] Fix: error trapping in
	  get_https2

2007-04-06 15:30  olivier.salaun

	* debian, debian/compat, debian/control, debian/copyright,
	  debian/rules: [Lionel Porcheron, Anywhere] Added the required
	  files to allow Debian packaging.

2006-11-13 13:02  olivier.salaun

	* Changes: updated

2006-04-11 14:01  olivier.salaun

	* lib/AuthCAS.pm: Fix: Added "Host:" HTTP header field to requests

2006-03-14 09:42  olivier.salaun

	* META.yml, lib/AuthCAS.pm, t/00.load.t: preparing release 1.1

2006-03-14 08:40  olivier.salaun

	* t/00.load.t: [reported by L.Porcheron]: incorrect tests referring
	  to old module name

2005-04-21 15:02  olivier.salaun

	* lib/AuthCAS.pm, lib/CAS.pm: enamed module

2005-04-21 14:50  olivier.salaun

	* Build.PL, MANIFEST, META.yml, Makefile.PL, sampleCasClient.pl:
	  enamed project AuthCAS?\024?\024

2005-04-21 14:04  olivier.salaun

	* sampleCasClient.pl: restore sample code

2005-04-21 14:04  olivier.salaun

	* ., .cvsignore, Build.PL, CAS.pm, ChangeLog, Changes, MANIFEST,
	  META.yml, Makefile.PL, README, lib, lib/CAS.pm,
	  sampleCasClient.pl, t, t/00.load.t, t/pod-coverage.t, t/pod.t: A
	  clean CPAN distribution of CAS.pm

2003-11-28 14:19  olivier.salaun

	* CAS.pm: Rename sub

2003-11-27 11:12  olivier.salaun

	* CAS.pm: Change: allow all service Path to be changed at new()
	  time
